@@ -24,6 +24,7 @@ gnulib_modules='
 acl
 alloca
 stdalign
+binary-io
 btowc
 c-ctype
 closeout
